add  new features
